--- a/Route.C41.G03.PL/appsettings.json
+++ b/Route.C41.G03.PL/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.; Database=MVCApplication;Trusted_connection=True;MultipleActiveResultSets=Ture"
+  }
