--- a/Route.C41.G03.DAL/Route.C41.G03.DAL.csproj
+++ b/Route.C41.G03.DAL/Route.C41.G03.DAL.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Models\rx2drnh2.pnq~" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
   </ItemGroup>
 
