--- a/Route.C41.G03.PL/appsettings.json
+++ b/Route.C41.G03.PL/appsettings.json
@@ -8,5 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.; Database=MVCApplication;Trusted_connection=True;MultipleActiveResultSets=Ture"
+    "DefaultConnection": "Server=.;Database=MVCApplication;Trusted_Connection=True;"
   }
+}
