--- a/Route.C41.G03.PL/appsettings.json
+++ b/Route.C41.G03.PL/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=MVCApplication;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.;Database=CompanyMVCProject;Trusted_Connection=True;"
   }
 }
